Step 4 Adding a model

--- a/MvcMovie/src/MvcMovie/appsettings.json
+++ b/MvcMovie/src/MvcMovie/appsettings.json
@@ -1,10 +1,15 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    }
+  },
+  "Data": {
+    "ApplicationDbContext": {
+      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-e9ed6d07-5f45-4555-bffa-6bfad2470199;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
